# sama-el

./: ProjectHome.md
ApproMo/Database/examples/: Approximation.org  ApproximationTest.cc  ApproximationTest.cc.org  Makefile
ApproMo/Database/lib/: libDatabaseso
ApproMo/Database/src/: Database.cc
ApproMo/FIFO/examples/: FIFOTest.cc  Makefile
ApproMo/InterpolateRBF/examples/: InterpolateRBFTest  InterpolateRBFTest.cc  Makefile
ApproMo/InterpolateRBF/include/: InterpolateRBF.h
ApproMo/InterpolateRBF/src/: Doxyfile  InterpolateRBF.cc
ApproMo/Kriging/cvs/: Entries  Repository
ApproMo/Kriging/examples/: DaceExam  DaceExam.cc  demo1.cc  input1.inp  stuetzstellen.txt
ApproMo/Kriging/include/: DirectSearch.h  approx.h  cmat.h  cppmat.h
ApproMo/Kriging/src/: gamma.cc  (+3 more)
gcc32/info/: cpp.info  gccint.info-4
gcc32/lib/: libstdc++.la  libsupc++.la
shark/: Makefile  configure
shark/EALib/: Makefile.in
shark/MOO-EALib/: MOOEALib.dsp  Makefile  README
shark/Mixture/: Makefile
shark/ReClaM/: Makefile  Readme.txt
shark/TestData/: configure.in
shark/TestData/RandomDistr/: Makefile.in
shark/TestData/TimeSeries/examples/: Makefile
shark/TestData/TimeSeries/src/: DiscreteMackeyGlass.cpp  Lorenz63.cpp  NoisyMackeyGlass.cpp
shark/autom4te.cache/: output.0
shark/shark-backup/: Makefile  Shark_All.dsw  configure
shark/shark-formo/: config.status  make_libs_all.bat  make_libs_debug.bat
shark/shark-not-work/: configure.in  make_all_debug.bat  make_libs_release.bat
shark/shark-not-work/Array/: Makefile.in
shark/shark-not-work/Array/doc/: Makefile.in  prepdoc2.cpp
shark/shark-not-work/Array/examples/: mean-var.cpp
shark/shark-not-work/EALib/: Makefile
shark/shark-not-work/EALib/doc/html/: _chromosome_8cpp.html  _chromosome_8h-source.html  _chromosome_8h.html  _chromosome_factory_8cpp-source.html  _chromosome_t_8h.html  _chromosome_t__double_8cpp-source.html  _individual_8cpp-source.html  _individual_8h.html  _interval_8h-source.html  class_c_m_a.html  class_c_m_a2004.html  class_chromosome-members.html  class_chromosome_t.html  class_chromosome_t_3_01double_01_4-members.html  class_chromosome_t_3_01double_01_4_1_1_derandom_const.html  class_chromosome_t_3_01int_01_4-members.html  class_chromosome_t_3_01int_01_4.html  class_chromosome_t__num-members.html  class_individual-members.html  class_interval-members.html  class_population.html  cma2004_8h-source.html  cma2004_8h.html  functions_0x65.html  functions_0x6a.html  functions_0x72.html  functions_func_0x62.html  functions_func_0x67.html  functions_func_0x69.html  functions_func_0x6c.html  functions_func_0x6d.html  functions_func_0x70.html  functions_rela.html  functions_type.html  globals_type.html  hierarchy.html  save_state_8cpp-example.html  sphere_g_a_8cpp-example.html  sqr_8h-source.html
shark/shark-not-work/EALib/examples/: integerES_i686
shark/shark-not-work/EALib/man/: Vorlage.tex  esStds.eps  evoalg.tex  re-1-0.tex  re-4-2.tex  re-7-3-7.tex  re-8-3-7.tex  re-8-3.tex  re-9-1.tex  re-9-3-7.tex
shark/shark-not-work/EALib/src/: ChromosomeFactory.cpp
shark/shark-not-work/LinAlg/: LinAlg.dsp  Makefile
shark/shark-not-work/LinAlg/doc/: README
shark/shark-not-work/LinAlg/examples/: Makefile  covar_corrcoef_test.dsp  dlinmin_test.dsp  eigensymmJacobi2_test.dsp  eigensymm_test.cpp  examples_All.dsw  g_inverse_matrix.dsp  linearRegression_test.dsp  pca_test.dsp  rank_decomp_test.cpp  svd_test.dsp
shark/shark-not-work/LinAlg/src/: bfgs2.cpp  detsymm.cpp
shark/shark-not-work/MOO-EALib/doc/: README
shark/shark-not-work/MOO-EALib/examples/: DWA.conf  VEGA.cpp  nsga2.dsp  pareto_1_10.arv
shark/shark-not-work/MOO-EALib/man/: Makefile
shark/shark-not-work/MOO-EALib/src/: ArchiveMOO.cpp
shark/shark-not-work/Metric/: Metric.dsp
shark/shark-not-work/Metric/doc/: README  preindex.ht_
shark/shark-not-work/Metric/examples/: Makefile
shark/shark-not-work/Mixture/examples/: Makefile.in
shark/shark-not-work/Mixture/src/: LocalLinearRegression.cpp
shark/shark-not-work/ReClaM/doc/: preindex.ht_
shark/shark-not-work/ReClaM/examples/: simpleFFNet.dsp  simpleFFNetSource.cpp
shark/shark-not-work/Rng/: config.status
shark/shark-not-work/Rng/autom4te.cache/: output.0
shark/shark-not-work/Rng/examples/: Makefile  RngTest2.dsp
shark/shark-not-work/Rng/man/: VorlageE.tex  honda-ftr.eps  i001-0-1.tex  weibull.eps
shark/shark-not-work/TestData/RandomDistr/: RandomDistr.dsp
shark/shark-not-work/TestData/TimeSeries/: Makefile
shark/shark-not-work/TestData/TimeSeries/src/: MackeyGlass.cpp
shark/shark-not-work/autom4te.cache/: traces.0
shark/shark-not-work/include/EALib/: ChromosomeFactory.h  ChromosomeT.h  cma2004.h
shark/shark-not-work/include/LinAlg/: LinearClassifier.h
shark/shark-not-work/include/ReClaM/: CG.h  C_Solver.h  ClassificationError.h  CrossValidation.h  Quickprop.h  RBFNet.h  SigmoidModel.h  createConnectionMatrix.h  optGrid.h
shark/shark-not-work/include/Rng/: HyperGeometric.h
shark/shark-not-work/include/TestData/TimeSeries/: NoisyIOSamples.h  NoisyMackeyGlass.h
src-rbf-lbfgsb/: README  run.sh  run_msg.txt  sama  sama.cpp  sama.cpp.work  statistic.cpp
src-rbf-lbfgsb/include/: nrutil.h
src-rbf-lbfgsb/temp/: lbfgsb.cpp
src-sama/: Makefile  airfoil-test.cpp  megarun.sh  run.sh  sama  sama-airfoil.cpp  statistic.cpp
src-sama/OSS2/: FEnergy.cpp  a.out  oss2_main.cpp  usedOSS2param.param
src-sama/airfoil_inverse/: ShapePress.c  ShapePressIN  eu.org  eu.org.bak  foilminmax-old.cpp  lana.c  main.cpp  pd0500naca.org  shape000.plt  shapemax.plt  shapemin.plt
src-sama/include/: ParamEstimate.h  fifo.h  lbfgsb.h
src-sama/ratioAirfoil/: Makefile  eu.org.bak  ratioairfoilObjIn.c
src-sama/temp/: lbfgsb.h
src-sama/tools/: Matrix.cpp  utilities.h
src-sama/versions/: sama.cpp.LS  sama.cpp.work-1  sama.cpp.work-2
trunk/shark/: INDEX.txt  Shark_Libs.dsw  cleanUp  make_all.bat  make_all_release.bat  shark_index.html
trunk/src-rbf-lbfgsb/: Makefile  sama.cpp.complete  statistic
trunk/src-sama/: FI.cpp  Makefile  README  objFunctions.cpp  rmse.cpp  sama.cpp
(+2111 files in other folders)
