dnl Process this file with autoconf to produce a configure script
AC_INIT(Makefile.in)

define(ACX_HAVE_LIB, [
		AC_PROVIDE([$0]) 
		AC_MSG_CHECKING(for lib[$1])
		havelib="yes"
		if test -f /lib/lib[$1].so.1 ; then LIBS="-l[$1] $LIBS"
		elif test -f /lib/lib[$1].a ; then LIBS="-l[$1] $LIBS"
		elif test -f /lib/lib[$1].so ; then LIBS="-l[$1] $LIBS"
		elif test -f /usr/ucblib/lib[$1].a ; then LIBS="-L/usr/ucblib -l[$1] $LIBS"
		elif test -f /usr/local/lib[$1].a ; then LIBS="-L/usr/local/lib -l[$1] $LIBS"
		else havelib="no"
		fi
		AC_MSG_RESULT($havelib)
	])dnl

define(ACX_HAVE_LESSTIF, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for lesstif)
		havelesstif="yes"
		if test -f $LESSTIFDIR/lib/Xm-2.1/.libs/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I$LESSTIFDIR/include/Motif-2.1"
			X_LIBS="$X_LIBS -L$LESSTIFDIR/lib/Xm-2.1/.libs"
		elif test -f /usr/lesstif/lib/libXm.so.1 -o -f /usr/lesstif/lib/libXm.a -o -f /usr/lesstif/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/lesstif/include"
			X_LIBS="$X_LIBS -L/usr/lesstif/lib"
		elif test -f /usr/local/lesstif/lib/libXm.so.1 -o -f /usr/local/lesstif/lib/libXm.a -o -f /usr/local/lesstif/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/local/lesstif/include"
			X_LIBS="$X_LIBS -L/usr/local/lesstif/lib"
		elif test -f /opt/lesstif/lib/libXm.so.1 -o -f /opt/lesstif/lib/libXm.a -o -f /opt/lesstif/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/opt/lesstif/include"
			X_LIBS="$X_LIBS -L/opt/lesstif/lib"
		elif test -f /usr/X11R6/LessTif/Motif2.1/lib/libXm.so.1 -o -f /usr/X11R6/LessTif/Motif2.1/lib/libXm.a -o -f /usr/X11R6/LessTif/Motif2.1/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/X11R6/LessTif/Motif2.1/lib"
			X_LIBS="$X_LIBS -L/usr/X11R6/LessTif/Motif2.1/include"
		elif test -f /usr/X11R6/LessTif/Motif1.2/lib/libXm.so.1 -o -f /usr/X11R6/LessTif/Motif1.2/lib/libXm.a -o -f /usr/X11R6/LessTif/Motif1.2/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/X11R6/LessTif/Motif1.2/include"
			X_LIBS="$X_LIBS -L/usr/X11R6/LessTif/Motif1.2/lib"
		elif test -f /usr/X11R6/lib/libXm.so.1 -o -f /usr/X11R6/lib/libXm.a -o -f /usr/X11R6/lib/libXm.so; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/X11R6/include"
			X_LIBS="$X_LIBS -L/usr/X11R6/lib"
		else havelesstif="no"
		fi
		AC_MSG_RESULT($havelesstif)
	])dnl

define(ACX_HAVE_MOTIF, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for motif)
		havemotif="yes"
		if test -f /usr/dt/lib/libXm.so.1 -o -f /usr/dt/lib/libXm.a -o -f /usr/dt/lib/libXm.so ; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/dt/include"
			X_LIBS="$X_LIBS -L/usr/dt/lib"
			if test -d /usr/openwin/lib ; then
				X_CFLAGS="$X_CFLAGS -I/usr/openwin/include"
dnl				X_LIBS="$X_LIBS -L/usr/openwin/lib"
			fi
		elif test -f /usr/openwin/lib/libXm.so.1 -o -f /usr/openwin/lib/libXm.a -o -f /usr/openwin/lib/libXm.so ; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/openwin/include"
dnl			X_LIBS="$X_LIBS -L/usr/openwin/lib"
			if test -d /usr/dt/lib ; then
				X_CFLAGS = "$X_CFLAGS -I/usr/dt/include"
				X_LIBS   = "$X_LIBS -L/usr/dt/lib"
			fi
		elif test -f /usr/X11R6/lib/libXm.so.1 -o -f /usr/X11R6/lib/libXm.a -o -f /usr/X11R6/lib/libXm.so ; then 
			LIBS="-lXm -lXt -lX11 $LIBS"
			X_CFLAGS="$X_CFLAGS -I/usr/X11R6/include"
dnl			X_LIBS="$X_LIBS -L/usr/X11R6/lib"
			if test -d /usr/dt/lib ; then
				X_CFLAGS = "$X_CFLAGS -I/usr/dt/include"
				X_LIBS   = "$X_LIBS -L/usr/dt/lib"
			fi
		else havemotif="no"
		fi
		AC_MSG_RESULT($havemotif)
	])dnl

define(ACX_HAVE_PVM, [
                AC_PROVIDE([$0])
                AC_MSG_CHECKING(for pvm)
                havepvm="yes"
                if test -f "${PVM_ROOT}/lib/${PVM_ARCH}/libpvm3.a"; then 
                        LIBS_PVM="-L${PVM_ROOT}/lib/${PVM_ARCH}/"
                elif test -f /usr/share/pvm3/lib/LINUX/libpvm3.a; then 
                        LIBS_PVM="-L/usr/share/pvm3/lib/LINUX"
						PVM_ROOT="/usr/share/pvm3/"
                elif test -f /usr/share/pvm3/lib/SUN4SOL2/libpvm3.a; then 
                        LIBS_PVM="-L/usr/share/pvm3/lib/SUN4SOL2"
						PVM_ROOT="/usr/share/pvm3/"
                elif test -f /usr/lib/pvm3/lib/LINUX/libpvm3.a; then
                        LIBS_PVM="-L/usr/lib/pvm3/lib/LINUX"
						PVM_ROOT="/usr/lib/pvm3/"
                elif test -f /usr/lib/pvm3/lib/SUN4SOL2/libpvm3.a; then
                        LIBS_PVM="-L/usr/lib/pvm3/lib/SUN4SOL2"
						PVM_ROOT="/usr/lib/pvm3/"
                elif test -f /usr/share/pvm3/lib/LINUXI386/libpvm3.a; then 
                        LIBS_PVM="-L/usr/share/pvm3/lib/LINUXI386"
						PVM_ROOT="/usr/share/pvm3/"
                elif test -f /opt/pvm3/lib/SUN4SOL2/libpvm3.a; then 
                        LIBS_PVM="-L/opt/pvm3/lib/SUN4SOL2"
						PVM_ROOT="/opt/pvm3/"
                else havepvm="no"
                fi
                AC_MSG_RESULT($havepvm)
        ])dnl


define(ACX_HAVE_PAGODE, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for Pagode)
		havepagode="yes"
		if test -f "./include/Pagode/CPlot.h"; then 
			FLAG_PAGODE="__is_existent__"
		else havepagode="no"
		fi
		AC_MSG_RESULT($havepagode)
	])dnl
	
define(ACX_HAVE_MOEALIB, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for MOO-EALib)
		havemoealib="yes"
		if test -f "./include/MOO-EALib/ArchiveMOO.h"; then 
			FLAG_MOEALIB="__is_existent__"
		else havemoealib="no"
		fi
		AC_MSG_RESULT($havemoealib)
	])dnl

define(ACX_HAVE_SIMANN, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for SimAnn)
		havesimann="yes"
		if test -f "./include/SimAnn/SimAnnealing.h"; then 
			FLAG_SIMANN="__is_existent__"
		else havesimann="no"
		fi
		AC_MSG_RESULT($havesimann)
	])dnl

define(ACX_HAVE_SPREADCAT, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for SpreadCAT)
		havespreadcat="yes"
		if test -f "./include/SpreadCAT/SpreadCAT.h"; then 
			FLAG_SPREADCAT="__is_existent__"
		else havespreadcat="no"
		fi
		AC_MSG_RESULT($havespreadcat)
	])dnl

define(ACX_HAVE_SELFTEST, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for SelfTest)
		SELFTEST_DIR="selftest"
		haveselftest="yes"
		if test -d "./$SELFTEST_DIR"; then
			FLAG_SELFTEST="__is_existent__"
			SELFTEST_DEPENS="install"
		else
			haveselftest="no"
			SELFTEST_DIR="notestsdir"
			SELFTEST_DEPENS="notests"
		fi
		AC_MSG_RESULT($haveselftest)
	])dnl


define(ACX_PATH_TO_TESTS_MAKEFILES, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for Makefiles of the tests of [$2] library)
		havepathforselftests="yes"
		if test -f $FIND && test $haveselftest = yes; then
			[$1]_TESTS_MAKEFILES=`$FIND . -name Makefile.in | grep "$SELFTEST_DIR/[$2]" | cut -d"/" -f2- | cut -d"." -f1 | sed -n -e 'H
g
s/\n/ /g
h
p
D' | sed -n '$p'`
			[$1]_TESTS=`$FIND . -name Makefile.in | grep "$SELFTEST_DIR/[$2]" | cut -d"/" -f2- | cut -d"." -f1 | sed -n -e 'H
g
s/\n/ /g
h
p
D' | sed -n '$p' | sed -n -e "s%$SELFTEST_DIR\/[$2]\/%%g
s/\/*Makefile//g
p"`
			SHARK_DIR=`pwd`
			if test [$1]_TESTS_MAKEFILES==""; then
			    havepathforselftest="no"
			fi
		else
		    havepathforselftests="no"
		    [$1]_TESTS_MAKEFILES=""
		    [$1]_TESTS=""
		fi
		AC_MSG_RESULT($havepathforselftests)
	])dnl
	
	
define(ACX_PATH_TO_TESTS_SOURCES, [
		AC_PROVIDE([$0])
		AC_MSG_CHECKING(for selftest sources)
		 haveselftestsources="no"
		if test -f $FIND && test $haveselftest = yes; then
		     SELFTEST_SOURCES_DIRECTORIES=`$FIND $SELFTEST_DIR | egrep "\.cpp" | sed -n -e 'H
g
s/\n/ /g
h
p
D' | sed -n '$p' | sed -n -e "s/ / ..\//g
p"`
		    SELFTEST_HEADERS_DIRECTORIES=`$FIND $SELFTEST_DIR | egrep "\.h" | sed -n -e 'H
g
s/\n/ /g
h
p
D' | sed -n '$p' | sed -n -e "s/ / ..\//g
p"`
		    haveselftestsources="yes"
		fi
		AC_MSG_RESULT($haveselftestsources)
		])dnl

dnl Check for programs
dnl CC="gcc296"
dnl CPP="gcc296 -E"
dnl CXX="g++296"

AC_MSG_CHECKING(Shark version number)
VERSION=1.4.4
AC_SUBST(VERSION)
AC_MSG_RESULT($VERSION)

AC_MSG_CHECKING(machine hardware name)
ARCH_MACH=`uname -m | tr -d " "`
AC_MSG_RESULT(${ARCH_MACH})
AC_SUBST(ARCH_MACH)
AC_MSG_CHECKING(kernel name)
HOST=`uname -s`
AC_MSG_RESULT(${HOST})
AC_SUBST(HOST)



AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC
AC_PATH_PROGS(FIND, gfind find, no)
if test "$FIND" = no; then
  AC_MSG_WARN(Could not find either \"find\" or \"gfind\". Assuming \"find\".)
  find="find"
fi
AC_SUBST(FIND)
AC_PATH_PROGS(MAKE, make gmake, no)
if test "$MAKE" = no; then
  AC_MSG_WARN(Could not find either \"make\" or \"gmake\". Assuming \"make\".)
  MAKE="make"
fi
AC_SUBST(MAKE)
AC_PATH_PROGS(PERL, perl, no)
if test "$PERL" = no; then
  AC_MSG_WARN(Could not find \"perl\".)
  MAKE="perl"
fi
AC_SUBST(PERL)
dnl Check for libraries
AC_PATH_XTRA
ACX_HAVE_LESSTIF
if test ${havelesstif} = no; then
  ACX_HAVE_MOTIF
fi
ACX_HAVE_LIB(m)
ACX_HAVE_PVM

if test ${havepvm} = yes; then
   PVM_LDLIBS="-lpvm3 -lgpvm3 -lnsl"
   if test "$HOST" = SunOS; then	
     PVM_LDLIBS="${PVM_LDLIBS} -lsocket"
     LIBS_PVM_R="${LIBS_PVM//-L/-R}"
     LIBS_PVM="${LIBS_PVM} ${LIBS_PVM_R}"
   fi
   AC_MSG_CHECKING(root of pvm)
   AC_MSG_RESULT($PVM_ROOT)
   AC_SUBST(PVM_ROOT)	
   AC_MSG_CHECKING(libraries paths for pvm)
   AC_MSG_RESULT($LIBS_PVM)
   AC_SUBST(LIBS_PVM)	
   AC_MSG_CHECKING(libraries for pvm)
   AC_MSG_RESULT($PVM_LDLIBS)
   AC_SUBST(PVM_LDLIBS)	
fi


ACX_HAVE_PAGODE
AC_SUBST(FLAG_PAGODE)
	
ACX_HAVE_MOEALIB
AC_SUBST(FLAG_MOEALIB)	

ACX_HAVE_SIMANN
AC_SUBST(FLAG_SIMANN)

ACX_HAVE_SPREADCAT
AC_SUBST(FLAG_SPREADCAT)	

ACX_HAVE_SELFTEST dnl
AC_SUBST(FLAG_SELFTEST)	
ACX_PATH_TO_TESTS_MAKEFILES(ARRAY,Array) dnl
ACX_PATH_TO_TESTS_MAKEFILES(LINALG,LinAlg) dnl
ACX_PATH_TO_TESTS_MAKEFILES(EALIB,EALib) dnl
ACX_PATH_TO_TESTS_MAKEFILES(RECLAM,ReClaM) dnl
ACX_PATH_TO_TESTS_MAKEFILES(METRIC,Metric)dnl
ACX_PATH_TO_TESTS_MAKEFILES(RNG,Rng)dnl
ACX_PATH_TO_TESTS_MAKEFILES(SIMANN,SimAnn)dnl
ACX_PATH_TO_TESTS_MAKEFILES(TESTDATA,TestData)dnl
ACX_PATH_TO_TESTS_MAKEFILES(PAGODE,Pagode)dnl
ACX_PATH_TO_TESTS_MAKEFILES(SPREAD_CAT,SpreadCAT)dnl
ACX_PATH_TO_TESTS_MAKEFILES(MOO_EALIB,MOO-EALib)dnl


AC_SUBST(ARRAY_TESTS)dnl
AC_SUBST(ARRAY_TESTS)dnl
AC_SUBST(LINALG_TESTS)dnl
AC_SUBST(EALIB_TESTS)dnl
AC_SUBST(RECLAM_TESTS)dnl
AC_SUBST(METRIC_TESTS)dnl
AC_SUBST(RNG_TESTS)dnl
AC_SUBST(SIMANN_TESTS)dnl
AC_SUBST(TESTDATA_TESTS)dnl
AC_SUBST(PAGODE_TESTS)dnl
AC_SUBST(SPREAD_CAT_TESTS)dnl
AC_SUBST(MOO_EALIB_TESTS)dnl

AC_SUBST(SHARK_DIR)dnl
AC_SUBST(SELFTEST_DIR)dnl
AC_SUBST(SELFTEST_DEPENS)dnl

ACX_PATH_TO_TESTS_SOURCES dnl
AC_SUBST(SELFTEST_SOURCES_DIRECTORIES)dnl
AC_SUBST(SELFTEST_HEADERS_DIRECTORIES)dnl


PATHS_TO_OUTPUT="$ARRAY_TESTS_MAKEFILES \
    $LINALG_TESTS_MAKEFILES \
    $EALIB_TESTS_MAKEFILES \
    $RECLAM_TESTS_MAKEFILES \
    $RNG_TESTS_MAKEFILES \
    $METRIC_TESTS_MAKEFILES \
    $SIMANN_TESTS_MAKEFILES \
    $TESTDATA_TESTS_MAKEFILES \
    $PAGODE_TESTS_MAKEFILES \
    $SPREAD_CAT_TESTS_MAKEFILES \
    $MOO_EALIB_TESTS_MAKEFILES     
    "

if test ${havepagode} = yes; then
  PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
    Pagode/Makefile\
    Pagode/examples/Makefile\
    Pagode/man/Makefile "
fi

if test ${havemoealib} = yes; then
  PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
    MOO-EALib/Makefile\
    MOO-EALib/examples/Makefile \
    MOO-EALib/doc/Makefile \
    MOO-EALib/man/Makefile "
fi

if test ${havesimann} = yes; then
PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
  SimAnn/Makefile\
  SimAnn/doc/Makefile\
  SimAnn/examples/Makefile "
fi

if test ${havespreadcat} = yes; then
PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
  SpreadCAT/Makefile\
  SpreadCAT/examples/Makefile\
  SpreadCAT/man/Makefile "
fi

PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
  Makefile\
  Array/Makefile\
  Array/examples/Makefile\
  Array/man/Makefile\
  Array/doc/Makefile\
  EALib/Makefile\
  EALib/examples/Makefile\
  EALib/man/Makefile\
  EALib/doc/Makefile\  
  LinAlg/Makefile\
  LinAlg/examples/Makefile\
  LinAlg/doc/Makefile\
  Metric/Makefile\
  Metric/examples/Makefile\
  Metric/doc/Makefile\
  Mixture/Makefile\
  Mixture/examples/Makefile\
  Mixture/doc/Makefile\
  ReClaM/Makefile\
  ReClaM/doc/Makefile\
  ReClaM/examples/Makefile\
  Rng/Makefile\
  Rng/man/Makefile\
  Rng/doc/Makefile\
  Rng/examples/Makefile\
  TestData/Makefile\
  TestData/RandomDistr/Makefile\
  TestData/TimeSeries/Makefile\
  TestData/TimeSeries/examples/Makefile"

if test ${haveselftestsources} = yes; then
PATHS_TO_OUTPUT="$PATHS_TO_OUTPUT \
  selftest-doc/selftest-doc.cfg\
  selftest-doc/Makefile"
fi

if test "$HOST" = Linux; then
	CFLAGS="-D__LINUX__ -fpic"
	LD_SHARED=-shared
	LIBEXT=".so"
fi
if test "$HOST" = SunOS; then
	X_LIBS_R=${X_LIBS//-L/-R}
	X_LIBS="${X_LIBS} ${X_LIBS_R}"
	CFLAGS="-D__SOLARIS__ -fPIC"
	LD_SHARED=-G
	LIBEXT=".so"
fi
if test "$HOST" = Darwin; then
    CFLAGS="-D__MAC__ -fPIC"
    LD_SHARED="-dynamiclib"
	LIBEXT=".dylib"
fi
AC_MSG_CHECKING(shared library suffix LIBEXT)
AC_MSG_RESULT($LIBEXT)
AC_MSG_CHECKING(compiler flags CFLAGS)
AC_MSG_RESULT($CFLAGS)
AC_MSG_CHECKING(shared library flag LD_SHARED)
AC_MSG_RESULT($LD_SHARED)
AC_MSG_CHECKING(X_LIBS)
AC_MSG_RESULT($X_LIBS)
AC_MSG_CHECKING(X_LIBS_R)
AC_MSG_RESULT($X_LIBS_R)

AC_MSG_CHECKING(flags for release mode)
CFLAGS_ND="-Wall -O3 -DNDEBUG  -fomit-frame-pointer  -finline-functions -ffast-math"
AC_MSG_RESULT($CFLAGS_ND)
AC_SUBST(CFLAGS_ND)

AC_MSG_CHECKING(flags for debug mode)
CFLAGS_D="-Wall -g -DDEBUG"
AC_MSG_RESULT($CFLAGS_D)
AC_SUBST(CFLAGS_D)

AC_SUBST(LIBEXT)	
AC_SUBST(X_LIBS_R)	
AC_SUBST(LD_SHARED)	
AC_SUBST(CFLAGS)	


AC_OUTPUT($PATHS_TO_OUTPUT)
